add_subdirectory( fc )
if ( CK01 )
add_subdirectory( schema )
endif ( CK01 )
add_subdirectory( appbase )
add_subdirectory( chainbase )
add_subdirectory( chain )
add_subdirectory( protocol )
add_subdirectory( net )
add_subdirectory( utilities )
add_subdirectory( plugins )
add_subdirectory( manifest )
if ( CK01 )
add_subdirectory( wallet )
endif ( CK01 )
